feat: Sanitização completa de credenciais e dados sensíveis
- Removidas todas as credenciais (DB, Thinger.io, tokens)
- Removidos IDs de hosting (terr6836)
- Removidos nomes, emails e dados pessoais
- Removidas URLs GitHub pessoais
- Pasta backup/ ignorada e removida do Git
- Arquivos ZIP ignorados
- Substituídos por placeholders e instruções claras
- Adicionado SANITIZACAO_CREDENCIAIS.md com documentação completa

Arquivos modificados: 21
Repositório seguro para compartilhamento público

--- a/public/sobre.html
+++ b/public/sobre.html
@@ -49,8 +49,8 @@
             <section class="mb-8">
                 <h3 class="text-xl font-bold text-gray-800 mb-3">Coordenação Geral</h3>
                 <ul class="text-gray-700 space-y-2">
-                    <li><strong>Coordenador:</strong> Francisco Leonardo de Lima</li>
-                    <li><strong>Professor Auxiliar:</strong> José Cleuton da Silva Belarmino</li>
+                    <li><strong>Coordenador:</strong> [Insira o nome do coordenador]</li>
+                    <li><strong>Professor Auxiliar:</strong> [Insira o nome do professor auxiliar]</li>
                 </ul>
             </section>
 
